--- a/www/templates/tab-huizhou.html
+++ b/www/templates/tab-huizhou.html
@@ -1,7 +1,7 @@
 <ion-view view-title="惠州新闻" align-title="center">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="model in Models" type="item-text-wrap" href="#/tab/news/111">
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="model in Models" type="item-text-wrap" href="#/tab/detail-huizou/111">
         <h2>{{model.title}}</h2>
         <p>{{model.date}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
